Hopefully this fixes any library files that show up

--- a/.gitignore
+++ b/.gitignore
@@ -264,5 +264,6 @@ Unity/Library/metadata/6d/6d9560e54396e4043860afbf642cc26d
 Unity/Library/metadata/e6/e60bba0efd9e52c47aa4a04f66247785
 Unity/Temp/UnityTempFile-fe343013365e73645899044f1256f6c3
 Unity/Temp/__EditModeScene
+Unity/Library/*
 Unity/Library/metadata/80/80a3616ca19596e4da0f10f14d241e9f
 Unity/Library/metadata/ea/ea023bcd9f332624a988e988302ed407
